# pydmgr

./: .pre-commit-config.yaml  README.md  pyproject.toml
pypb/: __init__.py  pypb.py
tests/: test_pypb.py
